fixed issue with alignment in desktop header

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -52,13 +52,17 @@ header {
     height: 64px; 
     padding: 0 24px;
     top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 
 header img {
     width: auto;
+}
+
+header .desktop {
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .left {
